created dtos for responses